<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:id="@+id/relativeLayout1">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/close"
                    android:src="@drawable/ic_close"
                    android:layout_marginStart="10dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/close_meme_activity"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/save"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_save"
                    android:contentDescription="@string/save_meme_photo"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_alignParentBottom="true"
                    android:background="#000"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/etTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/first_line_of_text"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textMultiLine"
                android:textSize="18sp" />

            <EditText
                android:inputType="textCapSentences|textMultiLine"
                android:importantForAutofill="no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etBottom"
                android:hint="@string/second_line_of_text"
                android:textSize="18sp"
                android:layout_margin="5dp"
                android:layout_below="@id/etTop"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etBottom"
                android:id="@+id/image_layout">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/main_image" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textOne"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textTwo"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="10dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout2"
                android:layout_below="@id/image_layout"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_size"
                    android:textColor="#000"
                    android:textSize="18sp"/>

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/seekBarTextSize"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout3"
                android:layout_below="@id/relativeLayout2"
                android:orientation="vertical"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_color"
                    android:textSize="18sp"
                    android:textColor="#000"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="20"
                        android:id="@+id/colorBlack"
                        android:background="#020202"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="20"
                        android:id="@+id/colorWhite"
                        android:background="#fff"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="20"
                        android:id="@+id/colorRed"
                        android:background="#FF0000"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="20"
                        android:id="@+id/colorBlue"
                        android:background="#001EFF"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="20"
                        android:id="@+id/colorGreen"
                        android:background="#37FF00"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/relativeLayout3"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_font"
                        android:textSize="18sp"
                        android:textColor="#000" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="50dp"
                        android:id="@+id/spinner" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>